Closes #93: Adding ability to request that metrics don't record a mats flow
As with MatsLoggingInterceptor#SUPPRESS_LOGGING_TRACE_PROPERTY_KEY, a
new MatsMetricsInterceptor#SUPPRESS_METRICS_TRACE_PROPERTY_KEY is added,
with corresponding "ALLOW" key for stages.

Will update MatsBrokerMonitor's 'mats.MatsBrokerMonitor.broadcastUpdate'
and receiver to utilize this function.